--- a/online_gift_store/src/index.css
+++ b/online_gift_store/src/index.css
@@ -165,6 +165,7 @@ Header
   display: flex;
   align-items: center;
 }
+
 .header a {
   font-weight: bold;
   text-transform: capitalize;
@@ -248,6 +249,16 @@ Hero
 About
 ======
 */
+.about{
+  font-weight: bold;
+  text-transform: capitalize;
+  margin: 0 0.25rem;
+  font-size: 0.85rem;
+  letter-spacing: 2px;
+  color: #64006c;
+  text-align: center;
+  padding-top: 4rem;
+}
 .about-section {
   width: var(--smallWidth);
   max-width: var(--maxWidth);
@@ -257,6 +268,21 @@ About
   line-height: 2rem;
   font-weight: 400;
   letter-spacing: 2px;
+}
+/* 
+====== 
+Categories
+======
+*/
+.category{
+  font-weight: bold;
+  text-transform: capitalize;
+  margin: 0 0.25rem;
+  font-size: 0.85rem;
+  letter-spacing: 2px;
+  color: #64006c;
+  text-align: center;
+  padding-top: 4rem;
 }
 /* 
 ====== 
