Single gift details page

--- a/online_gift_store/src/index.css
+++ b/online_gift_store/src/index.css
@@ -493,7 +493,7 @@ Cart
   margin-bottom: 0;
 }
 .cart-btn {
-  background: transparent;
+  background: #64006c;
   border: none;
   cursor: pointer;
 }
