--- a/online_gift_store/src/pages/Categories.css
+++ b/online_gift_store/src/pages/Categories.css
@@ -24,9 +24,14 @@
   font-family: Helvetica Neue;
   font-size: 30;
   font-weight: bold;
+  justify-content: center;
 }
 
 .card-ht {
   max-width: 100%;
   max-height: 100%;
+}
+
+.Link-clr {
+  color: #4a4a4a;
 }
