--- a/online_gift_store/src/index.css
+++ b/online_gift_store/src/index.css
@@ -266,10 +266,11 @@ Hero
   }
 
   .hero h1 {
-    font-size: 2rem;
+    font-size: 1.8rem;
+    font-weight: 800;
   }
   .hero p {
-    font-size: 2.3rem;
+    font-size: 1.8rem;
   }
   .btn-hero {
     font-size: 1.2rem;
@@ -284,7 +285,8 @@ About
 .about{
   font-weight: bold;
   text-transform: capitalize;
-  margin: 0 0.25rem;
+  margin: -4rem -4rem 2rem;
+  line-height: 205%;
   font-size: 0.85rem;
   letter-spacing: 2px;
   color: #64006c;
@@ -846,11 +848,12 @@ Filters Section
 /* Navbar */
 .navbar {
   background-color: #64006c !important;
+  height: 3.5rem;
  }
 
  .nav-item {
-  padding: 10px 11px 9px 5px;
-  margin-bottom: -25px;
+  padding: 10px 15px 14px 5px;
+  margin-bottom: -18px;
  }
 
  .nav-item h4 {
@@ -867,7 +870,7 @@ Filters Section
 .category-link{
   display:block;
   float: right;
-  margin-right: 10%;
+  margin-right: 15%;
 }
 
 .aboutus-container{
@@ -879,16 +882,37 @@ Filters Section
   object-fit: contain;
 }
 
-/* .about-component{
-  font-size: 2rem;
-  text-transform: capitalize;
-  letter-spacing: var(--mainSpacing);
+.category-link{
+  display:block;
+  float: right;
+  margin-right: 9%;
+  margin-top: -2%;
+  color: #64006c
+}
+
+.home-title{
   text-align: center;
-  margin-bottom: 3.5rem;
-  margin-top: 0rem;
-  margin-bottom: 10rem;
-  margin-left: 5rem;
-  margin-right: 5rem;
+  color: #64006c;
+  font-family: Helvetica Neue;
+  font-size: 45px;
+  font-weight: bold;
+}
+
+.services {
+  padding: 2rem 0;
+  bottom: 2em;
+  
+}
+
+.services-center {
+  width: 90vw;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
+  grid-row-gap: 2rem;
+  grid-column-gap: 50px;
+  color: #64006c;
+  font-family: Helvetica Neue;
 
 
-} */
+}
